--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -61,6 +61,24 @@
             app:layout_constraintTop_toBottomOf="@+id/cabecera"
             tools:listitem="@layout/menu_item" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contenedorTodos"
+            android:layout_width="0dp"
+            android:layout_height="250dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cabecera"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/item_producto" />
+
         <TextView
             android:id="@+id/cabecera"
             android:layout_width="0dp"
