--- a/app/src/main/res/layout/fragment_descripcion.xml
+++ b/app/src/main/res/layout/fragment_descripcion.xml
@@ -29,8 +29,23 @@
             app:layout_constraintVertical_bias="0.0" />
 
 
+        <TextView
+            android:id="@+id/txt_nombre_producto"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.115" />
+
         <ImageView
-            android:id="@+id/ivPizzaDetailPizza"
+            android:id="@+id/imagen"
 
             android:layout_width="250dp"
             android:layout_height="250dp"
@@ -92,7 +107,7 @@
                     app:layout_constraintVertical_bias="0.588" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/clPizzaDetailQuantityContainer"
+                    android:id="@+id/QuantityContainer"
                     android:layout_width="100dp"
                     android:layout_height="32dp"
                     android:layout_constraintHorizontal_bias="0.845"
@@ -157,7 +172,7 @@
                     android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:text="TextView"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -168,7 +183,7 @@
                     app:layout_constraintVertical_bias="0.972" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btPizzaDetailAddToCart"
+                    android:id="@+id/btDetailAddToCart"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
                     android:background="@drawable/add_to_cart_background"
