--- a/app/src/main/res/layout/layout_botton_sheet.xml
+++ b/app/src/main/res/layout/layout_botton_sheet.xml
@@ -6,35 +6,53 @@
     android:background="@drawable/bottom_sheet_backgroup"
     android:orientation="vertical">
 
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:text="Hoola"
-   />
-    <View
+    <TextView
+        android:layout_width="60dp"
+        android:layout_height="5dp"
+        android:background="@drawable/iconito"
+android:layout_marginLeft="155dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+
+        />
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/pinkColor"
-        android:layout_marginBottom="10dp"/>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Holaaa"></TextView>
-</LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/pinkColor"
-        android:layout_marginBottom="10dp"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonShare"
-        ></Button>
+        android:layout_height="77dp"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Hola Negro"></TextView>
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+android:textColor="@color/black"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="¿A dónde enviamos tu pedido?"
+            android:textStyle="bold"></TextView>
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btDetailAddToCart"
+        android:layout_width="410dp"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:drawableStart="@drawable/anadir"
+        android:drawablePadding="8dp"
+
+        android:padding="8dp"
+        android:paddingEnd="16dp"
+        android:text="Añadir nueva dirección"
+        android:textAllCaps="false"
+        android:textColor="@color/pinkColor"
+        android:textSize="15sp"
+ />
+
 </LinearLayout>
