--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -36,7 +36,7 @@
                 android:weightSum="2">
 
                 <TextView
-                    android:id="@+id/logIn"
+                    android:id="@+id/txt_paso1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -54,7 +54,7 @@
                     android:textStyle="bold|normal" />
 
                 <TextView
-                    android:id="@+id/singUp"
+                    android:id="@+id/txt_paso2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -83,6 +83,12 @@
                 android:padding="25dp"
                 android:visibility="visible">
 
+
+                <fragment
+                    android:id="@+id/mapFrag"
+                    class="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="294dp"
+                    android:layout_height="290dp" />
 
                 <Button
                     android:id="@+id/singIn2"
@@ -143,7 +149,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-                            android:layout_marginTop="2dp"
+                            android:layout_marginTop="4dp"
                             android:layout_marginRight="5dp"
                             android:hint="Nombre"
                             app:boxStrokeColor="#4E4A4A"
@@ -170,7 +176,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="8dp"
                             android:layout_marginRight="5dp"
                             android:hint="Apellido"
                             app:boxStrokeColor="#4E4A4A"
@@ -197,7 +203,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="8dp"
                             android:layout_marginRight="5dp"
                             android:hint="Email"
 
@@ -225,7 +231,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="8dp"
                             android:layout_marginRight="5dp"
                             android:hint="Teléfono"
                             app:boxStrokeColor="#4E4A4A"
@@ -248,52 +254,13 @@
                                 android:textStyle="normal" />
                         </com.google.android.material.textfield.TextInputLayout>
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:id="@+id/view_clave"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp"
-                            android:hint="Password"
-                            app:boxStrokeColor="#4E4A4A"
-                            app:boxStrokeWidth="1dp"
-                            app:endIconMode="password_toggle"
-                            app:hintTextColor="#4E4A4A"
-                            app:shapeAppearanceOverlay="@style/Button4"
-                            app:startIconDrawable="@drawable/ic_password">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/txt_clave"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:ems="10"
-                                android:inputType="textPassword"
-                                android:textColor="@color/black"
-                                android:textSize="13sp"
-                                android:textStyle="normal" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                        <CheckBox
-                            android:id="@+id/checkBox"
-                            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="true"
-                            android:clickable="false"
-                            android:text="Acepto los Términos y Condiciones."
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
-
                         <Button
                             android:id="@+id/singIn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginStart="24dp"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="10dp"
                             android:layout_marginEnd="24dp"
                             android:elevation="15dp"
                             android:gravity="center"
