--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -58,24 +58,25 @@
                                 android:textAlignment="viewEnd"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
-                                app:layout_constraintBottom_toTopOf="@+id/txt_delivery_compra"
+                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.842" />
+                                app:layout_constraintVertical_bias="0.426" />
 
                             <TextView
                                 android:id="@+id/textView12"
                                 android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:text="Descuento"
+                                android:layout_marginBottom="5dp"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
-                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintBottom_toTopOf="@+id/textView14"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_descuento_compra"
-                                app:layout_constraintHorizontal_bias="0.198"
+                                app:layout_constraintHorizontal_bias="0.2"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.371" />
+                                app:layout_constraintVertical_bias="0.972" />
 
                             <LinearLayout
 
@@ -125,15 +126,17 @@
                                 android:id="@+id/tt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="1dp"
                                 android:text="Sub Total"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
-                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:layout_marginBottom="5dp"
+                                app:layout_constraintBottom_toTopOf="@+id/textView12"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_sub_total_compra"
                                 app:layout_constraintHorizontal_bias="0.169"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.203" />
+                                app:layout_constraintVertical_bias="1.0" />
 
                             <TextView
                                 android:id="@+id/txt_sub_total_compra"
@@ -172,8 +175,8 @@
                                 app:layout_constraintEnd_toStartOf="@+id/txt_delivery_compra"
                                 app:layout_constraintHorizontal_bias="0.109"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/textView12"
-                                app:layout_constraintVertical_bias="0.154" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintVertical_bias="0.574" />
 
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -219,10 +222,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
+                                android:layout_marginTop="32dp"
                                 android:text="Método de entrega"
-                                android:layout_marginTop="30dp"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.377"
+                                app:layout_constraintHorizontal_bias="0.354"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -242,6 +245,7 @@
                                 android:layout_height="28dp"
                                 android:layout_marginTop="30dp"
                                 android:src="@drawable/comprobado_adobe_express"
+                                android:visibility="gone"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView1"
                                 app:layout_constraintHorizontal_bias="0.8"
                                 app:layout_constraintStart_toEndOf="@+id/textVie"
@@ -261,6 +265,18 @@
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/textVie"
                                 tools:listitem="@layout/item_entrega" />
+
+
+                            <ImageView
+                                android:id="@+id/chec1_bien"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_marginTop="28dp"
+                                android:src="@drawable/exclamacion"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView1"
+                                app:layout_constraintHorizontal_bias="0.80"
+                                app:layout_constraintStart_toEndOf="@+id/textVie"
+                                app:layout_constraintTop_toTopOf="parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -295,10 +311,10 @@
                                 android:id="@+id/textView10"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="30dp"
+                                android:layout_marginTop="28dp"
                                 android:text="Dirección de entrega"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.403"
+                                app:layout_constraintHorizontal_bias="0.346"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -319,7 +335,19 @@
                                 android:layout_marginTop="30dp"
                                 android:layout_marginEnd="20dp"
                                 android:src="@drawable/comprobado_adobe_express"
+                                android:visibility="gone"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/chec2_bien"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_marginTop="28dp"
+                                android:src="@drawable/exclamacion"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                                app:layout_constraintHorizontal_bias="0.795"
+                                app:layout_constraintStart_toEndOf="@+id/textView10"
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <androidx.recyclerview.widget.RecyclerView
@@ -344,11 +372,10 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView3"
                         android:layout_width="match_parent"
-                        android:layout_height="240dp"
+                        android:layout_height="110dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="25dp"
                         app:cardElevation="1dp"
-
                         app:cardUseCompatPadding="true">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -360,11 +387,11 @@
                                 android:id="@+id/imagen3"
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
-                                android:layout_marginTop="20dp"
+                                android:layout_marginTop="16dp"
 
                                 android:src="@drawable/google_docs"
                                 app:layout_constraintEnd_toStartOf="@+id/textView15"
-                                app:layout_constraintHorizontal_bias="0.628"
+                                app:layout_constraintHorizontal_bias="0.485"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -372,11 +399,11 @@
                                 android:id="@+id/textView15"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="30dp"
+                                android:layout_marginTop="32dp"
 
                                 android:text="Instrucciones de entrega:"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.448"
+                                app:layout_constraintHorizontal_bias="0.41"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -407,10 +434,10 @@
                                 android:id="@+id/chec3_bien"
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
-                                android:layout_marginTop="30dp"
+                                android:layout_marginTop="28dp"
                                 android:src="@drawable/exclamacion"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView3"
-                                app:layout_constraintHorizontal_bias="0.607"
+                                app:layout_constraintHorizontal_bias="0.676"
                                 app:layout_constraintStart_toEndOf="@+id/textView15"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -420,6 +447,7 @@
                                 android:layout_height="130dp"
                                 android:layout_marginTop="20dp"
                                 android:orientation="vertical"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintHorizontal_bias="0.0"
@@ -488,11 +516,15 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView4"
                         android:layout_width="match_parent"
-                        android:layout_height="110dp"
+                        android:layout_height="90dp"
+
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="25dp"
                         app:cardElevation="1dp"
-                        app:cardUseCompatPadding="true">
+                        app:cardUseCompatPadding="false">
+
 
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -500,19 +532,31 @@
                             android:layout_height="match_parent">
 
                             <ImageView
+                                android:id="@+id/chec4_bien"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_marginTop="30dp"
+                                android:src="@drawable/exclamacion"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView4"
+                                app:layout_constraintHorizontal_bias="0.809"
+                                app:layout_constraintStart_toEndOf="@+id/textView62"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
                                 android:id="@+id/imageView444"
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="8dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_marginStart="36dp"
                                 android:layout_marginEnd="8dp"
                                 android:src="@drawable/ruc"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/textView6"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintVertical_bias="0.487" />
 
                             <TextView
-                                android:id="@+id/textView6"
+                                android:id="@+id/textView62"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
@@ -538,6 +582,7 @@
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
                                 android:src="@drawable/comprobado_adobe_express"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView4"
                                 app:layout_constraintHorizontal_bias="0.831"
@@ -554,25 +599,23 @@
                         app:cardCornerRadius="25dp"
                         app:cardElevation="1dp"
                         app:cardUseCompatPadding="true">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
+                    <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
                             <ImageView
                                 android:id="@+id/imageView9"
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:layout_marginStart="8dp"
-                                android:layout_marginEnd="8dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:layout_marginStart="40dp"
                                 android:src="@drawable/pago_con_tarjeta"
                                 app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toStartOf="@+id/textView6"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintVertical_bias="0.435" />
 
                             <TextView
-                                android:id="@+id/textView6"
+                                android:id="@+id/textView65"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
@@ -594,14 +637,24 @@
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <ImageView
+                                android:id="@+id/chec5_bien"
+                                android:layout_width="28dp"
+                                android:layout_height="28dp"
+                                android:layout_marginTop="32dp"
+                                android:src="@drawable/exclamacion"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView5"
+                                app:layout_constraintHorizontal_bias="0.805"
+                                app:layout_constraintStart_toEndOf="@+id/textView65"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
                                 android:id="@+id/check5"
                                 android:layout_width="28dp"
                                 android:layout_height="28dp"
                                 android:src="@drawable/comprobado_adobe_express"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView5"
-                                app:layout_constraintHorizontal_bias="0.831"
-                                app:layout_constraintStart_toEndOf="@+id/textView6"
                                 app:layout_constraintTop_toTopOf="parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
